-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.3.1
-
Windows 7
-
Fix: 4387c5d6af49976318f7ca04c7a47b81a9cb19cc (qtbase/5.4, 30.10.2014, 5.4) , regression fix: 78cdb6b4b1c8c6213e967be56767d7dadd2bf8bf (qtbase/5.4, 5.11.2014, 5.4)
Steps:
Change theme to Windows Classic
Build and run the example application
Change focus to ComboBox by pressing tab
Actual result:
Font color is black
Expected result:
Font color is same as a Window Color and Appearance / Selected Items font color
- resulted in
-
QTBUG-42390 [REG 5.3.2 -> 5.4] Windows: Text is unreadable in QComboBox which has focus
-
- Closed
-
| For Gerrit Dashboard: QTBUG-41702 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 98480,3 | QWindowsStyle: fix CE_ComboBoxLabel text color | 5.4 | qt/qtbase | Status: MERGED | +2 | 0 |
| 98918,2 | Revert "QWindowsStyle: fix CE_ComboBoxLabel text color" | 5.4 | qt/qtbase | Status: ABANDONED | 0 | 0 |